<?xml version="1.0" encoding="UTF-8"?>
<!--
vim:sts=2:sw=2
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <organization>
    <name>The Virtual Commons</name>
    <url>http://commons.asu.edu</url>
  </organization>
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.asu.commons</groupId>
  <artifactId>foraging</artifactId>
  <packaging>jar</packaging>
  <version>1.4-SNAPSHOT</version>
  <name>foraging</name>
  <url>http://github.com/virtualcommons/foraging</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jetty.version>9.4.11.v20180605</jetty.version>
  </properties>
  <licenses>
    <license>
      <name>GNU General Public License, Version 3.0</name>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <url>scm:git:https://github.com/virtualcommons/foraging</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/virtualcommons/foraging/issues</url>
  </issueManagement>
  <repositories>
    <repository>
      <id>commons.archiva.internal</id>
      <name>dev.commons Maven2 repository</name>
      <url>https://dev.commons.asu.edu/archiva/repository/internal</url>
      <releases><enabled>true</enabled></releases>
      <snapshots><enabled>false</enabled></snapshots>
    </repository>
    <repository>
      <id>commons.archiva.snapshots</id>
      <name>dev.commons Maven2 snapshot repository</name>
      <url>https://dev.commons.asu.edu/archiva/repository/snapshots</url>
      <releases><enabled>false</enabled></releases>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>edu.asu.commons</groupId>
      <artifactId>sesef</artifactId>
      <version>0.9.7</version>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jogl</groupId>
      <artifactId>jogl</artifactId>
      <version>1.1.1-rc6</version>
    </dependency>
    <dependency>
      <groupId>javax.media</groupId>
      <artifactId>jmf</artifactId>
      <version>2.1.1e</version>
    </dependency>
    <dependency>
      <groupId>com.github.jiconfont</groupId>
      <artifactId>jiconfont-font_awesome</artifactId>
      <version>4.7.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.jiconfont</groupId>
      <artifactId>jiconfont-swing</artifactId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>foraging</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.4</version>
        <configuration>
          <links>
            <link>http://commons.asu.edu/api/sesef/</link>
          </links>
          <detectLinks>true</detectLinks>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${jetty.version}</version>
        <configuration>
          <supportedPackagings>
            <supportedPackaging>jar</supportedPackaging>
          </supportedPackagings>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
